force-app/main/default/objects/Emee_Check__c/Emee_Check__c.object-meta.xml
<CustomObject>
    <label>Employee Check</label>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>EC #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>