force-app/main/default/objects/Emee_Check__c/fields/Cert__c.field-meta.xml
<CustomField>
    <fullName>Cert__c</fullName>
    <label>Cert. #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>