force-app/main/default/objects/Emee_Check__c/fields/Disclosable_Court_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Disclosable_Court_Outcomes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick only if Yes on Certificate</inlineHelpText>
    <label>Disclosable Court Outcomes</label>
    <type>Checkbox</type>
</CustomField>