force-app/main/default/objects/Emee_Check__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Police_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>