force-app/main/default/objects/Emee_Check__c/fields/Pending_Charges__c.field-meta.xml
<CustomField>
    <fullName>Pending_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick only if Yes is on Certificate</inlineHelpText>
    <label>Pending Charges</label>
    <type>Checkbox</type>
</CustomField>