force-app/main/default/objects/Emee_Check__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preemployment Check</fullName>
            </value>
            <value>
                <fullName>Spot Audit Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>